--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "dotenv": "^17.2.3",
+    "firebase": "^12.6.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
